kube/aks/cron.yaml
---
# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2025 Collabora Limited
# Author: Jeny Sadadia <jeny.sadadia@collabora.com>

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron
  namespace: kernelci-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cron
  template:
    metadata:
      labels:
        app: cron
    spec:
      containers:
        - name: cron
          image: ghcr.io/kernelci/staging-kernelci:pipeline-cron
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: secrets
              mountPath: /secrets
            - name: config-volume
              mountPath: /home/kernelci/config
            - name: tools-volume
              mountPath: /home/kernelci/tools/cron
      volumes:
        - name: secrets
          secret:
            secretName: pipeline-secrets
        - name: config-volume
          configMap:
            name: pipeline-configmap
        - name: tools-volume
          hostPath:
            path: ./tools/cron/
