kube/aks/scheduler-k8s.yaml
---
# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2023 Collabora Limited
# Author: Guillaume Tucker <guillaume.tucker@collabora.com>

apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-k8s
  namespace: kernelci-pipeline
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: scheduler-k8s
  template:
    metadata:
      labels:
        app: scheduler-k8s
    spec:
      containers:
        - name: scheduler
          image: kernelci/kernelci:pipeline@sha256:5ecd9b94a22f064a15a9ded85cbe09ff10018fe7cf6fdfaca794121f3b4a4b5f
          imagePullPolicy: Always
          command:
            - ./src/scheduler.py
            - --settings=/secrets/kernelci.toml
            - --yaml-config=/config
            - loop
            - --name=scheduler_k8s
            - --runtime-type=kubernetes
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: secrets
              mountPath: /secrets
            - name: config-volume
              mountPath: /config
            - name: tmpsecrets
              mountPath: /home/kernelci/secrets
            - name: tmpsecrets
              mountPath: /home/kernelci/.kube
              subPath: k8s-credentials/.kube
            - name: tmpsecrets
              mountPath: /home/kernelci/.config/gcloud
              subPath: k8s-credentials/.config/gcloud
            - name: tmpsecrets
              mountPath: /home/kernelci/.azure
              subPath: k8s-credentials/.azure
      volumes:
        - name: secrets
          secret:
            secretName: pipeline-secrets
        - name: config-volume
          configMap:
            name: pipeline-configmap
        - name: k8scredentials
          secret:
            secretName: k8scredentials
        - name: tmpsecrets
          emptyDir: {}
