kube/aks/scheduler-lava.yaml
---
# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2023 Collabora Limited
# Author: Guillaume Tucker <guillaume.tucker@collabora.com>

apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-lava
  namespace: kernelci-pipeline
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: scheduler-lava
  template:
    metadata:
      labels:
        app: scheduler-lava
    spec:
      containers:
        - name: scheduler
          image: kernelci/kernelci:pipeline@sha256:5ecd9b94a22f064a15a9ded85cbe09ff10018fe7cf6fdfaca794121f3b4a4b5f
          imagePullPolicy: Always
          command:
            - ./src/scheduler.py
            - --settings=/secrets/kernelci.toml
            - --yaml-config=/config
            - loop
            - --name=scheduler_lava
            - --runtime-type
            - lava
            - pull_labs
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: secrets
              mountPath: /secrets
            - name: config-volume
              mountPath: /config
      volumes:
        - name: secrets
          secret:
            secretName: pipeline-secrets
        - name: config-volume
          configMap:
            name: pipeline-configmap
