kube/aks/tarball.yaml
---
# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2023 Collabora Limited
# Author: Guillaume Tucker <guillaume.tucker@collabora.com>

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarball
  namespace: kernelci-pipeline
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tarball
  template:
    metadata:
      labels:
        app: tarball
    spec:
      containers:
        - name: tarball
          image: kernelci/kernelci:pipeline@sha256:bb01424c4dedcd2ffa87cef225b09116cf874bc2b91fc63ed6d993d6fc5c43cb
          imagePullPolicy: Always
          resources:
            requests:
              memory: 5Gi
              cpu: 500m
            limits:
              memory: 8Gi
              cpu: 2
          command:
            - ./src/tarball.py
            - --settings=/secrets/kernelci.toml
            - --yaml-config=/config
            - run
            - --name=tarball
          volumeMounts:
            - name: secrets
              mountPath: /secrets
            - name: src
              mountPath: /home/kernelci/pipeline/data/src
            - name: config-volume
              mountPath: /config
      volumes:
        - name: secrets
          secret:
            secretName: pipeline-secrets
        - name: src
          emptyDir: {}
        - name: config-volume
          configMap:
            name: pipeline-configmap
