kube/aks/timeout.yaml
# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2023 Collabora Limited
# Author: Guillaume Tucker <guillaume.tucker@collabora.com>

apiVersion: v1
kind: Pod
metadata:
  name: timeout
  namespace: kernelci-pipeline
spec:
  containers:
  - name: timeout
    image: kernelci/pipeline
    imagePullPolicy: Always
    command:
    - ./src/timeout.py
    - --settings=/home/kernelci/pipeline/kube/aks/kernelci.toml
    - run
    - --mode=timeout
---
apiVersion: v1
kind: Pod
metadata:
  name: closing
  namespace: kernelci-pipeline
spec:
  containers:
  - name: timeout
    image: kernelci/pipeline
    imagePullPolicy: Always
    command:
    - ./src/timeout.py
    - --settings=/home/kernelci/pipeline/kube/aks/kernelci.toml
    - run
    - --mode=closing
---
apiVersion: v1
kind: Pod
metadata:
  name: holdoff
  namespace: kernelci-pipeline
spec:
  containers:
  - name: timeout
    image: kernelci/pipeline
    imagePullPolicy: Always
    command:
    - ./src/timeout.py
    - --settings=/home/kernelci/pipeline/kube/aks/kernelci.toml
    - run
    - --mode=holdoff
