kube/aks/lava-callback.yaml
---
# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2023 Collabora Limited
# Author: Guillaume Tucker <guillaume.tucker@collabora.com>

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lava-callback
  namespace: kernelci-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lava-callback
  template:
    metadata:
      labels:
        app: lava-callback
    spec:
      containers:
        - name: lava-callback
          image: kernelci/kernelci:lava-callback@sha256:f5bcc965ae5ca891839f390e5ff7ef5f6bd2f99457e95c8fe8d25f096c22cadd
          imagePullPolicy: Always
          command:
            - '/usr/local/bin/uwsgi'
          args:
            - '--master'
            - '--http=:8000'
            - '-p4'
            - '--buffer-size=32768'
            - '--enable-threads'
            - '--wsgi-file=src/lava_callback.py'
            - '--callable=app'
          volumeMounts:
            - name: secrets
              mountPath: /secrets
            - name: config-volume
              mountPath: /config
      volumes:
        - name: secrets
          secret:
            secretName: pipeline-secrets
        - name: config-volume
          configMap:
            name: pipeline-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: lava-callback
  namespace: kernelci-pipeline
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: lava-callback
