kube/aks/ingress.yaml
---

# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2023 Collabora Limited
# Author: Guillaume Tucker <guillaume.tucker@collabora.com>
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ingressclass-pipeline
  name: pipeline-ingress
  namespace: kernelci-pipeline
  annotations:
    cert-manager.io/cluster-issuer: all-issuer
spec:
  ingressClassName: ingressclass-pipeline
  tls:
    - hosts:
        - kernelci-pipeline.eastus.cloudapp.azure.com
      secretName: pipeline-tls
  rules:
    - host: kernelci-pipeline.eastus.cloudapp.azure.com
      http:
        paths:
          - backend:
              service:
                name: lava-callback
                port:
                  number: 8000
            path: /
            pathType: Prefix
